--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -97,6 +97,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    transition: 0.5s;
 }
 
 .menuToggle-icon {
